--- a/Resource/Style/body.css
+++ b/Resource/Style/body.css
@@ -1,39 +1,38 @@
-* {box-sizing: border-box;}
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
 
 body { 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.header {
+.navbar {
   overflow: hidden;
   background-color: hsl(180, 60%, 85%);
-  padding: 10px 10px;
+  padding: 1rem;
 }
 
-.header a {
+.navbar__link {
   float: left;
   color: black;
   text-align: center;
-  padding: 12px;
+  padding: 1.2rem;
   text-decoration: none;
-  font-size: 18px; 
-  line-height: 25px;
-  border-radius: 4px;
+  font-size: 1.8rem; 
+  line-height: 2.5rem;
+  border-radius: .4rem;
 }
 
-.header a.logo {
-  font-size: 25px;
-  font-weight: bold;
-  
-}
-
-.header a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.header a.active {
+.navbar__link--active {
   background-color: dodgerblue;
   color: white;
 }
@@ -43,7 +42,7 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-  .header a {
+  .navbar__link {
     float: none;
     display: block;
     text-align: left;
@@ -54,77 +53,76 @@ body {
   }
 }
 
-.topdev {
+.main-section__intro {
   background-color: whitesmoke;
   color: black;
-  padding: 20px;
+  padding: 2rem;
   text-align: center;
+  font-size: 2.5rem;
+  line-height: 1.2;
 }
 
-.middev {
+.event-capture {
   background-color: rgb(247, 232, 232);
   color: black;
-  padding: 20px;
-  text-align: left
+  padding: 2rem;
+  text-align: left;
+  height: 50rem;
  }
 
+ .event-capture h2 {
+  font-size: 1.5rem;
+ }
 
-.middevcon {
+ .main-section {
+  max-width: 120rem;
+  margin: 0 auto;
+ }
+
+.event-capture__container {
  display: flex;
  justify-content: space-around;
  align-items: center;
+ height: 45rem;
  }
 
-.middev1 {
+.event-capture__item {
   width: 30%;
-  background-color: rgb(235, 247, 227);
   color: rgb(0, 0, 0);
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-  text-align: left;
+  border-radius: .2rem;
+  height: 35rem;
 }
 
-.middev2 {
-  width: 30%;
-  background-color: rgb(235, 247, 227);
-  color: rgb(0, 0, 0);
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-  text-align: left;
+.event-capture__image {
+  height: 100%;
+  width: 100%;
+  border-radius: .2rem;
+  margin-bottom: .8rem;
 }
 
-
-.middev3 {
-  width: 30%;
-  background-color: rgb(235, 247, 227);
-  color: rgb(0, 0, 0);
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-  text-align: left;
+.event-capture__title {
+  font-size: 2rem;
 }
 
-.middevwithcon {
+.model-photography {
   display: flex;
   justify-content: space-around;
   align-items: center;
   background-color: rgb(247, 232, 232);
   }
 
-.middev4 {
+.model-photography__details {
   width: 50%;
   text-align: left;
 
 }
 
 
-.middev5 {
+.model-photography__image-container {
   width: 50%;
 }
 
-.leftcol {
+.model-photography__list {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
@@ -134,6 +132,17 @@ body {
   background-color: rgb(233, 227, 226);
   color: rgb(0, 0, 0);
   border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
+  margin: 2rem;
+  padding: 2rem;
+}
+
+.model-photography {
+
+}
+
+.model-photography__container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: rgb(247, 232, 232);
 }
